--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
@@ -16,7 +17,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^18.2.18",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "sass": "^1.69.5",
