--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.5.6",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18.2.18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "sass": "^1.69.5",
+    "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^13.5.6",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "sass": "^1.69.4",
     "typescript": "^5"
   }
 }
