--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,13 +6,11 @@
     "plugin:react-hooks/recommended",
     "plugin:react/jsx-runtime",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@next/next/recommended",
-    "plugin:prettier/recommended"
+    "plugin:@next/next/recommended"
   ],
   "plugins": [
     "react",
-    "@typescript-eslint",
-    "prettier"
+    "@typescript-eslint"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -76,7 +74,6 @@
     }
   },
   "rules": {
-    "prettier/prettier": "error",
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "react/react-in-jsx-scope": "off",
