--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5",
     "zod": "^3.22.4"
   },
@@ -24,7 +24,7 @@
     "@testing-library/react": "^14.2.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.70",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "eslint": "^8.57.0",
