--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18next-http-backend": "^2.5.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
